@@ -117,6 +117,7 @@ LUFA_PATH = ../../../..
 
 # LUFA library compile-time options
 LUFA_OPTS += -D USB_HOST_ONLY
+LUFA_OPTS += -D HID_HOST_BOOT_PROTOCOL_ONLY
 LUFA_OPTS += -D USE_STATIC_OPTIONS="(USB_OPT_REG_ENABLED | USB_OPT_AUTO_PLL)"
 
 
